--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: "Montserrat", sans-serif;
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.image {
+  height: 700px;
+  background: #141414 url("/src/components/style/risbw.jpeg") no-repeat right
+    100%;
+  background-size: 40%;
+  border-top-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.whitecolor {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.blackcolor {
+  background-color: #141414;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  margin: 0px 100px;
+  padding-top: 175px;
+  width: 50%;
+}
+.header > h1 {
+  font-family: sans-serif;
+  text-align: left;
+  font-weight: 600;
+  font-size: 1.4em;
+  opacity: 1;
+  color: #ffffff;
+}
+
+.header > h3 {
+  color: rgb(158, 157, 157);
+  font-size: 1.5em;
+}
+
+.header > h4 {
+  color: rgb(158, 157, 157);
+  font-size: 1.3em;
+}
+.header > h1 > span {
+  color: #16d34e;
+  font-size: 2.5em;
+}
+.header > p {
+  color: rgb(158, 157, 157);
 }
