--- a/src/components/style/experience.css
+++ b/src/components/style/experience.css
@@ -40,5 +40,5 @@
   height: 100px;
   background-color: #16d34e;
   z-index: 1;
-  /* overflow: hidden; */
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
