--- a/src/components/style/education.css
+++ b/src/components/style/education.css
@@ -112,3 +112,9 @@
   margin-top: 150px;
   margin-left: 120px;
 }
+
+@media screen and (max-width: 1055px) {
+  .section-one {
+    width: 50% !important;
+  }
+}
