--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,40 @@
 .header > p {
   color: rgb(158, 157, 157);
 }
+
+@media screen and (max-width: 900px) {
+  .image{
+    height: 550px;
+  }
+  .header{
+    padding-top: 100px;
+    margin: 0 50px;
+    width: 55%;
+  }
+  .header > h1 > span  {
+    font-size: 1.5em;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .header > h1 > span  {
+    font-size: 1.5em;
+    display: block;
+  }
+  .image{
+    height: auto;
+    padding-bottom: 15px;
+  }
+  .header > h3{
+    font-size: 1em;
+  }
+  .header > h4{
+    font-size: 1em;
+  }
+  .header{
+    margin: 0 25px;
+    width: 70%;
+    padding-top: 120px;
+  }
+  
+}
