--- a/src/components/style/experience.css
+++ b/src/components/style/experience.css
@@ -42,3 +42,18 @@
   z-index: 1;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
+
+@media screen and (max-width: 900px) {
+  .exphead{
+    width: 100%;
+  }
+  .company{
+    margin: 0px 50px 0 50px;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .company{
+    margin: 0px 25px 0 25px;
+  }
+}
