--- a/src/components/style/education.css
+++ b/src/components/style/education.css
@@ -111,6 +111,7 @@
 .third-feature {
   margin-top: 150px;
   margin-left: 120px;
+  margin-bottom: 15px;
 }
 .classesDiv-content {
   /* width: 40% !important; */
