--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,7 +1,6 @@
 .image {
   height: 700px;
-  background: #141414 url("/src/components/style/risbw.jpeg") no-repeat right
-    100%;
+  background: #141414;
   background-size: 40%;
   border-top-left-radius: 4px;
   border-bottom-right-radius: 4px;
